# compiler

./: CMakeLists.txt  LICENSE  README.md
include/: generator.h  lexer.h  parser.h  types.h  utils.h
src/: generator.c  lexer.c  main.c  parser.c  utils.c
tests/: test1.bi  test2.bi  test3.bi  test4.bi
